fixed some spacing issues in portfolio

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -139,8 +139,8 @@ header .container{
 img.about-photo {
     float: left;
     padding: 0 1em 1em 0;
-    width: 200px;
-    height: 200px;
+    width: 160px;
+    height: 160px;
 }
 
 .info {
@@ -167,26 +167,28 @@ img.about-photo {
   
 /****portfolio***/
 .image-port{  
-    width: 270px;
-    height: 200px;
+    width: 230px;
+    height: 160px;
 }
  
  
 .portfolio-item{
     display: inline-block;
     position: relative;
-    width: 270px;
-    height: 200px;
+    width: 230px;
+    height: 160px;
 }
  
 .portfolio-item:nth-child(even){
-    margin-left: 22px;
-    margin-right: 3.5px;
+    margin-left: 31px;
+    margin-right: 32px;
 
 }
  
 .item-name{
     position: relative;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 21px;
     top: -75px;
     height: 16%;
     text-align: center;
@@ -210,7 +212,6 @@ footer {
     color: #cccccc;
     background-color: #666666;
     border-top: 8px solid #4aaaa5;
-    z-index: 1000;
 }
  
 /***contact***/
